Added about me, interests, and about Minnie

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,18 +2,29 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Rashel's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <h1>Rashel's Portfolio</h1>
+      <p> Hi! My name is Rashel Rojas and I am first-generation student majoring in 
+        computer science at Columbia University. What got me into CS was a beginner's 
+        JavaScript class in middle school and it became something that I am passionate
+        about. I hope to use my skills in CS to eventually work at a company working on 
+        environmental and sustainability projects. </p>
+
+        <img src="/images/profile.jpg" width = "50%" />
+
+        <p> A little about me: I'm Ecuadorian, I love working out, and I am so 
+        excited to a part of SPS! </p>
+
+        <div class = "center">
+            <a href="quarantine.html"><button>Just Quarantine Things</button></a>
+            <a href="minnie.html"><button>Minnie</button></a> 
+            <a href="https://www.linkedin.com/in/rashelrojas/"><button>Let's Connect!</button></a> 
+        </div>
     </div>
   </body>
 </html>
