Week 2: Modified index.html and script.js files for fetch tutorial

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,6 +20,11 @@
         <p> A little about me: I'm Ecuadorian, I love working out, and I am so 
         excited to a part of SPS! </p>
 
+        <p>Click <a href="/hello">here</a> to read a fun fact about me or click the button below.</p>
+        <button onclick="showMessage();">Fun Fact</button>
+        <div id="hello-world-container"></div>
+
+        <br><br>
         <div class = "center">
             <a href="quarantine.html"><button>Just Quarantine Things</button></a>
             <a href="minnie.html"><button>Minnie</button></a> 
