Week 2: Added message option for POST tutorial

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -24,6 +24,13 @@
         <button onclick="showMessage();">Fun Fact</button>
         <div id="hello-world-container"></div>
 
+        <form action="/form-handler" method="POST">
+            <p>Feel free to send me a message:</p>
+            <textarea name="text-input"></textarea>
+            <br/>
+            <input type="submit" />
+        </form>
+
         <br><br>
         <div class = "center">
             <a href="quarantine.html"><button>Just Quarantine Things</button></a>
