Week 3: Added bar graph with coronavirus data

--- a/portfolio/src/main/webapp/quarantine.html
+++ b/portfolio/src/main/webapp/quarantine.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Just Quarantine Things</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
@@ -19,6 +20,13 @@
             <li>Getting a succulent (super easy to take care of omg it's insane)</li><br>
             <li>Getting those cheesy dorm lights because why not</li>
         </ul> 
+
+      <p>I've also definately spent more time on the internet during the 
+          beginning of quarantine. I found some interesting quarantine statistics 
+          displayed in the graph below. It shows the percent change in user time 
+          spent online in different industries, from tourism to supermarket websites.
+      </p>
+      <div id="chart-container"></div>
     </div>
   </body>
 </html>
